[package]
name = 'substrate-forum-module'
version = '1.1.0'
authors = ['Junius Zhou <junius.zhou@gmail.com>']
edition = '2018'

[dependencies]
hex-literal = '0.1.0'
serde = { version = '1.0.101', optional = true}
serde_derive = { version = '1.0.101', optional = true }
rstd = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}
frame-support-procedural = { package = 'frame-support-procedural', git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}
system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}
codec = { package = 'parity-scale-codec', version = '1.0.0', default-features = false, features = ['derive'] }
node-runtime = { package = 'node-runtime', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-io'
rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'

[dev-dependencies]
runtime-io = { package = 'sp-io', default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}
sp-core = { package = 'sp-core', git = 'https://github.com/paritytech/substrate.git', rev = 'ddb309ae7c70e5e51a60879af18819cf28be4a32'}

[features]
default = ['std']
std = [
	'serde',
	'serde_derive',
	'codec/std',
	'rstd/std',
	'runtime-io/std',
	'sp-runtime/std',
	'frame-support/std',
	'system/std',
	'balances/std',
	'timestamp/std',
	'node-runtime/std',
]
